# eID-Server

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.java-signer  README.md  compose.yml  cvca.key  cvca.pub  debug_refresh_test.py  defect_list.md  docker-compose.yml  localhost.cnf  pom.xml  psk_tls_server.rs  test_complete_flow.py  test_refresh_endpoint.py  test_refresh_flexibility.py  test_useid.sh  useid_request.xml
.config/: nextest.toml
.debug/: .rustc_info.json
.github/actions/cache/: action.yml
.github/workflows/: ci.yml
Config/: cert.pem  key.pem
TestDocumentation/: SettingFlow.md
certs/: cert_chain.b64  cv_chain.b64
certs_ecdh/: CVCA_Key_at.pkcs8  cvca  dvca  term  term_key
certss/: cert.pem  key.pem  localhost.crt  localhost.key
config/: settings.toml
eID-service/: CERTIFICATE_GUIDE.md  QUICK_START.md  README.md  server.js  tsconfig.json
eID-service/docs/: guide.md  schemas.md
eID-service/lib/: countryCodes.ts  soapClient.ts
eID-service/pages/: _app.tsx  error.tsx  index.tsx  results.tsx
eID-service/pages/api/: refresh.ts  tctoken.ts
eID-service/types/: eid.ts
playground/: package-lock.json  package.json  tsconfig.json
playground/__MACOSX/keys/: ._saml-signing.crt
playground/keys/: saml-signing.crt  saml-signing.key
playground/src/: index.ts  test.ts
src/: adapters.rs  apdu.rs  asn1.rs  config.rs  configs.rs  crypto.rs  cvcert.rs  domain.rs  lib.rs  main.rs  pki.rs  psk_tls_server.rs  server.rs  session.rs  setup.rs  soap.rs  telemetry.rs  tls.rs
src/adapters/: xml_signature.rs
src/adapters/xml_signature/: constants.rs  mod.rs  signer.rs  types.rs  utils.rs  validator.rs
src/apdu/: builder.rs  commands.rs  tlv.rs  utils.rs
src/asn1/: auth_data.rs  cert_desc.rs  cvcert.rs  oid.rs  perso_data.rs  security_info.rs  utils.rs
src/common/: error.rs  models.rs
src/crypto/: curves.rs  ecdh.rs  ecdsa.rs  errors.rs  kdf.rs  keys.rs  rsa.rs  sym.rs  utils.rs
src/cvcert/: crypto.rs  errors.rs  tests.rs  types.rs
src/domain/: eid.rs  models.rs  service.rs
src/domain/eid/: certificate.rs  models.rs  ports.rs  service.rs  session_manager.rs
src/domain/models/: eid.rs  errors.rs  paos.rs
src/domain/transmit/: ports.rs  service.rs
src/eid/: mod.rs  tc_token_client.rs  tls2_psk.rs
src/eid/common/: error.rs  models.rs
src/eid/get_result/: builder.rs  error.rs  mod.rs  model.rs  parser.rs
src/eid/get_server_info/: builder.rs  (+3 more)
src/eid_client/: communication.rs
src/eidas/: middleware.rs
src/pki/: cms.rs  crl.rs  identity.rs  mod.rs  scheduler.rs  trustore.rs  truststore.rs  validation.rs
src/sal/: mod.rs
src/security/: crypto.rs  tls.rs
src/server/: errors.rs  handlers.rs  responses.rs  session.rs
src/session/: data.rs  errors.rs  store.rs  tests.rs
src/signed_objects/: errors.rs  mod.rs  verifier.rs
src/soap/: config.rs  de.rs  ser.rs  tests.rs  wsse.rs
src/test/: useid_test.rs
src/tests/: conformance.rs
src/tls/: cert_utils.rs  errors.rs  psk.rs  session.rs
src/useID/: handlers.rs  mod.rs  models.rs  service.rs
src/use_id/: handlers.rs  mod.rs  models.rs  service.rs
src/utils/: error.rs  logging.rs
src/web/: saml.rs  server.rs  soap.rs
test-eService/: .env.local  README.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
test-eService/certs/: eid_server.pem
test-eService/lib/: countryCodes.ts  sessionManager.ts  soapClient.ts  wsSecurity.ts
test-eService/pages/: _app.tsx  error.tsx  index.tsx  results.tsx  serverinfo.tsx
test-eService/styles/: globals.css
test-eService/types/: eid.ts
test_certs/identity/: cert_desc.der  cvc_key.der  dv_cvc.der  sector_pubkey.der  server.key  server_chain.pem  term_cvc.der  x509.der  x509_key.der
test_certs/truststore/: csca-link-1.der  csca-link-2.der  csca-link-3.der  csca-root.der  eService.der  root-ca.der
test_data/: curl-test-getResult.md  demo_certificate.pem  demo_private_key.pem  did_auth_request.xml  get_result_request.xml  get_result_response.xml  get_server_info_response.xml  startpaos.xml  test_xml_parsing.rs  use_id_request.xml  use_id_response.xml
test_data/cvcerts/: CMDVCAeID00001.hex  CMTERMeID00001.hex  DECVCAeID00103.hex
test_data/ec_keys/: brainpoolp256r1.der  brainpoolp256r1.pem
test_data/eid/: didAuthEAC1Response.xml  didAuthEAC2Response.xml  didAuthenticateEAC1.xml  didAuthenticateEAC2.xml  getResultRequest.xml  getResultResponse.xml  getServerInfoRequest.xml  startPAOS.xml  transmit.xml  transmitResponse.xml  useIDRequest.xml  useIDResponse.xml
test_data/pki/: blacklist.xml  defect-list.xml  link_csca.cer  root_csca.cer
test_data/redis/: ca.crt  ca.key  ca.srl  redis.crt  redis.dh  redis.key
test_data/rsa/: rsa4096.der
test_resource/: test_useid.sh
tests/: eid_request.rs  health.rs  server_info_test.rs  tls.rs  trust_store.rs  useid.rs
tests/common/: mod.rs
tests/utils/: mod.rs
tmp/: authn_request.xml  signed.xml
(+132 files in other folders)
