[package]
name = "eid-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server framework
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-openssl"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Async runtime
tokio = { version = "1.46", features = ["full"] }

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Serialization / Deserialization
rasn = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
pem = "3.0"

# Configuration
config = "0.15"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Miscellaneous utilities
async-trait = "0.1"
dashmap = "6.1"
hex-literal = "1"
time = { version = "0.3", features = ["serde"] }

# Cryptographic dependencies
hex = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
x509-parser = "0.18.0"
base64 = "0.22.1"

[dependencies.redis]
version = "0.32"
features = ["tokio-native-tls-comp", "connection-manager", "safe_iterators"]

[package.metadata.cargo-machete]
ignored = ["pollster"]

[dev-dependencies]
pollster = "0.4"

[profile.dev.package.backtrace]
opt-level = 3
