[package]
name = "eid-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server framework
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-openssl"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Async runtime
tokio = { version = "1.46", features = ["full"] }

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Serialization / Deserialization
hex = "0.4"
rasn = "0.27"
rasn-cms = "0.27"
rasn-pkix = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
quick-xml = { version = "0.38", features = ["serialize"] }

# Configuration
config = "0.15"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Miscellaneous utilities
async-trait = "0.1"
dashmap = "6.1"
hex-literal = "1"
regex = "1"
dotenvy = "0.15"
walkdir = "2"
zip = "5.1"
scraper = "0.20"
pem = "3.0"
url = "2.5"
once_cell = "1.21"
tokio-cron-scheduler = "0.15"
mini-moka = "0.10"
uuid = { version = "1.18", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
time = { version = "0.3", features = ["serde", "parsing"] }

# Cryptographic utilities
rand = "0.9"
aes = "0.8"
cmac = "0.7"
sha1 = "0.10"
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
x509-parser = { version = "0.18", features = ["verify", "verify-aws"] }

[dependencies.redis]
version = "0.32"
features = ["tokio-native-tls-comp", "connection-manager", "safe_iterators"]

[package.metadata.cargo-machete]
ignored = ["pollster"]

[dev-dependencies]
hex-literal = "1"
pollster = "0.4"
rcgen = "0.14"
tempfile = "3"

[profile.dev.package.backtrace]
opt-level = 3
